--- a/example/Quickstart Guide.ipynb
+++ b/example/Quickstart Guide.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "import cocotb\n",
     "from cocotb.clock import Clock\n",
-    "from cocotb.triggers import RisingEdge, Event\n",
+    "from cocotb.triggers import RisingEdge\n",
     "from cocotb.types import LogicArray\n",
     "from cocotb.wavedrom import trace\n",
     "import wavedrom\n",
@@ -173,12 +173,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ba46b11eb1e408ab76b8c04f5f0dac3",
+       "model_id": "708f897496d94b29b951bce1936aba28",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<svgwrite.drawing.Drawing at 0x7efdf04…"
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<svgwrite.drawing.Drawing at 0x7f33155…"
       ]
      },
      "metadata": {},
@@ -225,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2865cb595829408fbb2fee9beef6f418",
+       "model_id": "c856f648b6014368b3b2332dfbedea22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,12 +239,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ba46b11eb1e408ab76b8c04f5f0dac3",
+       "model_id": "708f897496d94b29b951bce1936aba28",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<svgwrite.drawing.Drawing at 0x7efdf04…"
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<svgwrite.drawing.Drawing at 0x7f33155…"
       ]
      },
      "metadata": {},
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   },
   "toc": {
    "base_numbering": 0
