--- a/example/Quickstart Guide.ipynb
+++ b/example/Quickstart Guide.ipynb
@@ -34,42 +34,12 @@
     "import cocotb\n",
     "from cocotb.clock import Clock\n",
     "from cocotb.triggers import RisingEdge\n",
-    "from cocotb.types import LogicArray\n",
-    "from cocotb.wavedrom import trace\n",
-    "import wavedrom\n",
-    "import ipywidgets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ff70382f-f318-4d37-9389-1665aa83a019",
-   "metadata": {
-    "editable": false,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "### Assert that initial output is zero.\n",
+    "from cocotb.task import resume\n",
+    "from cocotbext.waves import waveform\n",
     "\n",
-    "**Note**: Since Verilator is a cycle-based simulator, it initializes all `X` values to 0. If an event-driven simulator is used (e.g. Icarus Verilog), then change `LogicArray(0)` to `LogicArray(\"X\")`,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11476baa-f099-4da8-af9a-9c1b59fb95ca",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "assert LogicArray(dut.q.value) == LogicArray(0)"
+    "import wavedrom\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import AppLayout, VBox, Layout"
    ]
   },
   {
@@ -96,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clock = Clock(dut.clk, 10, units=\"us\")\n",
+    "clock = Clock(dut.clk, 10, unit=\"us\")\n",
     "cocotb.start_soon(clock.start(start_high=False));"
    ]
   },
@@ -111,8 +81,9 @@
    },
    "source": [
     "### Setup the waveform monitor\n",
+    "Waveform support is provided by the `cocotbext-waves` package since wavedrom support was remove in cocotb 2.0\n",
     "\n",
-    "This monitor will capture a waveform from the D flip-flop and render it to any cell that has `display(waveform_output)`."
+    "The monitor will capture a waveform from the D flip-flop"
    ]
   },
   {
@@ -128,18 +99,13 @@
    },
    "outputs": [],
    "source": [
-    "# Create an output widget to display the waveform within this cell. This is necessary since waveform_monitor() is asynchronous. \n",
-    "# Without it, the waveform would display within subsequent cells.\n",
-    "waveform_output = ipywidgets.Output()\n",
-    "async def waveform_monitor():\n",
-    "    with trace(dut.d, dut.q, clk=dut.clk) as waves:\n",
-    "        while True:\n",
-    "            await RisingEdge(dut.clk)\n",
-    "            # clear_output() doesn't work with threads\n",
-    "            # https://github.com/jupyter-widgets/ipywidgets/issues/3260#issuecomment-907715980\n",
-    "            waveform_output.outputs = ()\n",
-    "            waveform_output.append_display_data(wavedrom.render(waves.dumpj()))\n",
-    "cocotb.start_soon(waveform_monitor());                                        "
+    "waves = waveform(clk=dut.clk, name=\"dff\", start=True)\n",
+    "waves.add_signal(\n",
+    "    [\n",
+    "        dut.d, \n",
+    "        dut.q\n",
+    "    ]\n",
+    ")                                    "
    ]
   },
   {
@@ -161,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77901d9-595b-4d0d-9f91-3b01a0adade6",
+   "id": "b6e62b8d-44c0-4a12-b5ed-f7f687d1880a",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -180,7 +146,8 @@
     "    assert dut.q.value == expected_val, f\"output q was incorrect on the {i}th cycle\"\n",
     "    expected_val = val\n",
     "\n",
-    "display(waveform_output)"
+    "# Use wavedrom.render instead of save_svg\n",
+    "display(wavedrom.render(str(waves)))"
    ]
   },
   {
@@ -188,17 +155,17 @@
    "id": "04204902-462a-4a53-ada3-1e5d92e4551d",
    "metadata": {},
    "source": [
-    "### Step D flip-flop with random values\n",
+    "### Toggle D flip-flop\n",
     "\n",
     "Interactivity can be added by using `ipywidgets`. In the code below, an async function, `step_random()` is called whenver the *Step* button is pressed. \n",
     "\n",
-    "For asynchronous callbacks, be sure to use the `@cocotb.function` decorator"
+    "For asynchronous callbacks, be sure to wrap the callback with the `resume()` function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "024c399b-2abf-4fb0-b2aa-6cd8b8c90f9f",
+   "id": "4fc5e3b6-b0e5-4a32-8c99-856a7aa9681f",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -208,15 +175,47 @@
    },
    "outputs": [],
    "source": [
-    "@cocotb.function\n",
-    "async def step_random(b):\n",
-    "    dut.d.value = random.randint(0,1)\n",
-    "    await RisingEdge(dut.clk)\n",
+    "out = widgets.Output(layout=Layout(overflow='scroll'))\n",
     "\n",
-    "button = ipywidgets.Button(description=\"Step\")\n",
-    "button.on_click(step_random)\n",
-    "display(button, waveform_output)"
+    "async def step(b):\n",
+    "    await RisingEdge(dut.clk)\n",
+    "    out.outputs = ()\n",
+    "    out.append_display_data(wavedrom.render(str(waves)))\n",
+    "\n",
+    "step_button = widgets.Button(description=\"Step\")\n",
+    "step_button.on_click(resume(step))\n",
+    "\n",
+    "def toggle_dff(change):\n",
+    "    new_value = int(change[\"new\"])\n",
+    "    toggle_button.description = f'd={str(new_value)}'\n",
+    "    dut.d.value = new_value\n",
+    "    \n",
+    "toggle_button = widgets.ToggleButton(value=bool(dut.d.value), description=f'd={dut.d.value}')\n",
+    "toggle_button.observe(toggle_dff, names=\"value\")\n",
+    "\n",
+    "AppLayout(header = None,\n",
+    "          left_sidebar = VBox([step_button,\n",
+    "                               toggle_button],\n",
+    "                              layout=Layout(flex='0 0 auto')\n",
+    "                             ),\n",
+    "          center = out,\n",
+    "          right_sidebar = None,\n",
+    "          footer = None,\n",
+    "          height='100px',\n",
+    "          layout=Layout(display='flex',\n",
+    "                        overflow='hidden',\n",
+    "                        justify_content='flex-start')\n",
+    "          )\n",
+    "          "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24fd437a-d31d-412a-8b56-332c0d6e5445",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -235,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.12"
   },
   "toc": {
    "base_numbering": 0
